apps/billing/envs/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: billing-prod
  name: billing-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-prod
  strategy: {}
  template:
    metadata:
      labels:
        app: billing-prod
    spec:
      serviceAccountName: billing-prod
      containers:
      - image: quay.io/fedora/httpd-24-micro
        name: httpd-24-micro
