apps/billing/envs/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: billing-prod
  name: billing-prod
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: billing-prod
